Ample margins used for clarification of EFT plot
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@340 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -221,7 +221,8 @@ The advantage of this procedure is that the obtained bounds can be directly and 
 If a search is not simply a counting experiment and exploits the shapes of kinematic distributions, any of the two conditions on the momentum transfer should be applied on the benchmarks using generator level information, by discarding events that are invalid, and the limit derived from
 the truncated shape must be recalculated. This provides the necessary rescaling of the cross section while keeping the information on the change in the kinematic distributions due to the removal of the invalid events. 
 
-\subsection{Sample results of EFT truncation procedures} 
+\subsection{Sample results of EFT truncation procedures}
+
 An example of the application of the two procedures to the limit on $M_*$ from Ref.~\cite{ATL-PHYS-PUB-2014-007} as a function of the product of the couplings is shown in Figure~\ref{Ecm<Mcut}. Only the region between the dashed and the solid line is excluded. It can be seen that the procedure from~\cite{Racco:2015dxa} outlined in Section~\ref{sec:TruncationWithSHat}, shown in blue, is more conservative than the procedure from Refs.~\cite{Busoni:2014sya,Aad:2015zva}, described in Section~\ref{sec:TruncationWithQTr}.
 
 \begin{figure}
@@ -231,6 +232,8 @@ An example of the application of the two procedures to the limit on $M_*$ from R
 		The procedure from~\cite{Racco:2015dxa} outlined in Section~\ref{sec:TruncationWithSHat} is shown in blue, while the procedure from Refs.~\cite{Busoni:2014sya,Aad:2015zva}, described in Section~\ref{sec:TruncationWithQTr} is shown in red. Only the region between the dashed and the solid lines is excluded.}
 	\label{fig:monojet_MstarMmed}
 \end{figure}
+
+\Todo{This plot needs to be clarified further: what is the statistics for the truncation with sHat, and does this cause the sudden drop at $\sqrt{g}$=2?}
 
 \subsection{Comments on unitarity considerations}
 \Todo{Waiting for input from J. Alcaraz}
