fwang: update on CKKWL kt-merging
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@342 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -361,8 +361,10 @@ Figure\,\ref{fig:RatioKine_D5} shows the \MET distribution of the samples at $\M
 
 %While there is a $\sim10\%$ difference observed between the samples with up to 1 parton and up to 3 partons at low $\MET$, only marginal difference is seen between the samples generated with up to 2 and 3 partons.
 
-With an event selection requiring \MET and the leading jet \pT being larger than $250\,\gev$ and allowing for up to 3 jets with $\pT>30\,\gev$, the sample generated with up to 1 parton has 17.4\% smaller yield compared to the sample with up to 3 partons, while the yield of the sample with up to 2 partons is only 2.2\% smaller.
-Note the jet multiplicity cut is important here as the agreement between the two samples improves at higher \MET when the cut is not applied.
+%With an event selection requiring \MET and the leading jet \pT being larger than $250\,\gev$ and allowing for up to 3 jets with $\pT>30\,\gev$, the sample generated with up to 1 parton has 17.4\% smaller yield compared to the sample with up to 3 partons, while the yield of the sample with up to 2 partons is only 2.2\% smaller.
+With an event selection requiring \MET and the leading jet \pT being larger than $250\,\gev$, the sample generated with up to 1 parton has 10.3\% larger yield compared to the sample with up to 3 partons, while the yield of the sample with up to 2 partons is only 2.3\% larger.
+If an additional cut is applied allowing for up to 3 jets with $\pT>30\,\gev$, the agreement improves to 3.2\% larger for up to 1 parton and 0.7\% larger for up to 2 partons, comapred with up to 3 partons.
+%Note the jet multiplicity cut is important here as the agreement between the two samples improves at higher \MET when the cut is not applied.
 %At \MET>400\,\gev$, 0+1 parton emission has 16.8\% yield less and 0+1+2 parton emission has 2.4\% less compared to 0+1+2+3 parton emission. With $\MET>600\,\gev$, 0+1 parton emission has 16.5\% yield less and 0+1+2 parton emission has 2.9\% less compared to 0+1+2+3 parton emission. The same numbers hold if a symmetric cut is added on leading jet transverse momentum.
 A similar comparison is shown in Fig.\,\ref{fig:RatioKine_D5_2} for the jet multiplicity in the events with the leadning jet $\pT>250\,\gev$, where an agreement at the level of $\sim3\%$ between the samples with up to 2 and 3 parton emissions is observed for number of jets up to 7.
 This justifies it is sufficient to produce samples with up to 2 parton emissions only at the generator level and ignore generating higher parton emissions.
