Added Fabio Maltoni's edits
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@343 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2343,8 +2343,7 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 
 @article{Nussinov:1985xr,
 	author         = "Nussinov, S.",
-	title          = "{TECHNOCOSMOLOGY: COULD A TECHNIBARYON EXCESS PROVIDE A
-	'NATURAL' MISSING MASS CANDIDATE?}",
+	title          = "{Technocosmology: could a technibaryon excess provide a 'natural' missing mass candidate?}",
 	journal        = "Phys.Lett.",
 	volume         = "B165",
 	pages          = "55",
