--- a/doc/tex/TheoryUncertainties.tex
+++ b/doc/tex/TheoryUncertainties.tex
@@ -5,6 +5,8 @@ plays in general a more important role for the background estimations
 does for signal simulations. Nevertheless, also for signal samples theoretical uncertainties are relevant, and may become even dominant in certain regions of phase space.
 
 In this chapter, we provide technical details on how theoretical systematic uncertainties can be assessed for events generated with \powheg and \madgraph.
+This chapter does not cover the uncertainties related to the merging of different samples, nor the uncertainty
+due to the choice of the modeling of the parton shower.  
 
 %\Todo{This section describes the technical details of how to vary
 %  input parameters, but it does not describe the overall strategy of
