Added Fabio Maltoni's comments
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@344 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -108,8 +108,9 @@ important to restrict the scope and timescale to the following:
 \item The forum should standardize the event generator implementation
   of the simplified models and harmonize other common technical
   details as far as practical. It
-  would be desirable to have a common choice of LO/NLO, ME-parton
-  shower matching and merging, factorization and renormalization
+  would be desirable to have a common choice of leading order (LO) and 
+  next-to-leading order (NLO) matrix elements corresponding to the state of the art calculations, 
+  parton shower matching and merging, factorization and renormalization
   scales for each of the simplified models. This will also lead to a
   common set of theory uncertainties, which will facilitate the
   comparison of results between the two collaborations.
