Update for initial version of author list.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@345 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/frontmatter.tex
+++ b/doc/frontmatter.tex
@@ -13,7 +13,7 @@
 %\svnfooter
 %%%{\noindent Version:  \svnrev ;\svndate ;\svnauthor}
 \topskip0pt
-\vspace*{\fill}
+%\vspace*{\fill}
 \begin{fullwidth}
 \sffamily
 {
@@ -23,16 +23,16 @@
   \@title
   %\@title
 }\\
-\vspace{4\baselineskip}
+\vspace{1\baselineskip}
 {\Large 
 \noindent
-% \input contributors.tex
-Author/contributor list to be added as document is finalized.\\
-Contact editors: \href{mailto:lhc-dmf-admin@cern.ch}{lhc-dmf-admin@cern.ch}
-}\\
-\vspace{4\baselineskip}
-\noindent
 \@date\\
-\vspace{\baselineskip}
+\vspace{2\baselineskip}
+\noindent
+%Author/contributor list to be added as document is finalized.\\
+\input contributors/contributors.tex
+~\\
+\noindent Contact editors: \href{mailto:lhc-dmf-admin@cern.ch}{lhc-dmf-admin@cern.ch}
+}\\
 \end{fullwidth}
 \vspace*{\fill}
