--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -1,113 +1,244 @@
-\href{mailto:daniel.abercrombie@cern.ch}{Daniel Robert Abercrombie}
-\href{mailto:ece.akilli@cern.ch}{Ece Akilli}
-\href{mailto:juan.alcaraz@cern.ch}{Juan Alcaraz}
-\href{mailto:Jeremy.Andrea@cern.ch}{Jeremy Andrea}
-\href{mailto:Patrizia.Azzi@cern.ch}{Patrizia Azzi}
-\href{mailto:mbackovic@gmail.com}{Mihailo Backovic}
-\href{mailto:yangbai@physics.wisc.edu}{Yang Bai}
-\href{mailto:swagato.banerjee@gmail.com}{Swagato Banerjee}
-\href{mailto:Alexander.Belyaev@cern.ch}{Alexander Belyaev}
-\href{mailto:antonio.boveia@cern.ch}{Antonio Boveia}
-\href{mailto:amelia.jean.brennan@cern.ch}{Amelia Jean Brennan}
-\href{mailto:Oliver.Buchmueller@Cern.ch}{Oliver Buchmueller}
-\href{mailto:mbuckley@physics.rutgers.edu}{Matthew Buckley}
-\href{mailto:giorgio.busoni@sissa.it}{Giorgio Busoni}
-\href{mailto:Michael.Buttignol@cern.ch}{Michael Buttignol}
-\href{mailto:cacciapa@ipnl.in2p3.fr}{Giacomo Cacciapaglia}
-\href{mailto:Regina.Caputo@cern.ch}{Regina Caputo}
-\href{mailto:lmc@physics.osu.edu}{Linda Carpenter}
-\href{mailto:Mingshui.Chen@cern.ch}{Mingshui Chen}
-\href{mailto:john.paul.chou@cern.ch}{John Paul Chou}
-\href{mailto:annapaola.de.cosa@cern.ch}{Annapaola De Cosa}
-\href{mailto:deandrea@ipnl.in2p3.fr}{Aldo Deandrea}
-\href{mailto:adifranz@uci.edu}{Anthony DiFranzo}
-\href{mailto:caterina.doglioni@cern.ch}{Caterina Doglioni}
-\href{mailto:Tristan.DuPree@cern.ch}{Tristan DuPree}
-\href{mailto:Johannes.Erdmann@cern.ch}{Johannes Erdmann}
-\href{mailto:cfischer@ifae.es}{Cora Fischer}
-\href{mailto:pjfox@fnal.gov}{Patrick Fox}
-\href{mailto:Benjamin.Fuks@cern.ch}{Benjamin Fuks}
-\href{mailto:genest@lpsc.in2p3.fr}{Marie-Helene Genest}
-\href{mailto:Bhawna.Gomber@cern.ch}{Bhawna Gomber}
-\href{mailto:arely.cortes.gonzalez@cern.ch}{Arely Cortes Gonzales}
-\href{mailto:barbara.alvarez.gonzalez@cern.ch}{Barbara Alvarez Gonzalez}
-\href{mailto:johanna.gramling@cern.ch}{Johanna Gramling}
-\href{mailto:michele.degruttola@cern.ch}{Michele De Gruttola}
-\href{mailto:kristian.hahn@cern.ch}{Kristian Hahn}
-\href{mailto:ulrich.haisch@physics.ox.ac.uk}{Ulrich Haisch}
-\href{mailto:roni.harnik@gmail.com}{Roni Harnik}
-\href{mailto:philip.coleman.harris@cern.ch}{Philip Coleman Harris}
-\href{mailto:Kerstin.Hoepfner@cern.ch}{Kerstin Hoepfner}
-\href{mailto:siew.yan.hoh@cern.ch}{Siew Yan Hoh}
-\href{mailto:schsu@uw.edu}{Shih-Chieh Hsu}
-\href{mailto:valerio.ippolito@cern.ch}{Valerio Ippolito}
-\href{mailto:thomas.jacques@unige.ch}{Thomas Jacques}
-\href{mailto:Xiangyang.Ju@cern.ch}{Xiangyang Ju}
-\href{mailto:felix.kahlhoefer@desy.de}{Felix Kahlhoefer}
-\href{mailto:Alexis.Kalogeropoulos@cern.ch}{Alexis Kalogeropoulos}
-\href{mailto:laser.seymour.kaplan@cern.ch}{Laser Seymour Kaplan}
-\href{mailto:Lashkar.Kashif@cern.ch}{Lashkar Kashif}
-\href{mailto:valya.khoze@durham.ac.uk}{Valentin Khoze}
-\href{mailto:Raman.Khurana@cern.ch}{Raman Khurana}
-\href{mailto:khristian.kotov@cern.ch}{Khristian Kotov}
-\href{mailto:dmytro.kovalskyi@cern.ch}{Dmytro Kovalskyi}
-\href{mailto:spliew@lbl.gov}{Seng Pei Liew}
-\href{mailto:tongylin@gmail.com}{Tongyan Lin}
-\href{mailto:steven.lowette@cern.ch}{Steven Lowette}
-\href{mailto:romain.madar@cern.ch}{Romain Madar}
-\href{mailto:sarah.malik@cern.ch}{Sarah Malik}
-\href{mailto:Fabio.Maltoni@cern.ch}{Fabio Maltoni}
-\href{mailto:o.p.c.mattelaer@durham.ac.uk}{Olivier Mattelaer}
-\href{mailto:kentarou.mawatari@vub.ac.be}{Kentarou Mawatari}
-\href{mailto:c.mccabe@uva.nl}{Christopher McCabe}
-\href{mailto:megy@clermont.in2p3.fr}{Theo Jean Megy}
-\href{mailto:enrico.morgante@unige.ch}{Enrico Morgante}
-\href{mailto:mrenna@fnal.gov}{Steve Mrenna}
-\href{mailto:siddharth.m.narayanan@cern.ch}{Siddharth M Narayanan}
-\href{mailto:andrew.james.nelson@cern.ch}{Andy Nelson}
-\href{mailto:Sergio.Novaes@cern.ch}{Sergio Novaes}
-\href{mailto:klaas.ole.padeken@cern.ch}{Klaas Ole Padeken}
-\href{mailto:Priscilla.Pani@cern.ch}{Priscilla Pani}
-\href{mailto:mpapucci@lbl.gov}{Michele Papucci}
-\href{mailto:Jacopo.Pazzini@pd.infn.it}{Jacopo Pazzini}
-\href{mailto:Bjoern.Penning@cern.ch}{Bjorn Penning}
-\href{mailto:mmp@ifae.es}{Mario Martinez Perez}
-\href{mailto:mpeskin@slac.stanford.edu}{Michael Peskin}
-\href{mailto:Arturo.Rodolfo.Sanchez.Pineda@cern.ch}{Arturos Sanchez Pineda}
-\href{mailto:Deborah.Pinna@cern.ch}{Deborah Pinna}
-\href{mailto:davide.racco@unige.ch}{Davide Racco}
-\href{mailto:emanuele.re@physics.ox.ac.uk}{Emanuele Re}
-\href{mailto:antonio.riotto@unige.ch}{Antonio Riotto}
-\href{mailto:rizzo@slac.stanford.edu}{Thomas Rizzo}
-\href{mailto:rizzo@slac.stanford.edu}{Tom Rizzo}
-\href{mailto:rainer.roehrig@cern.ch}{Rainer Roehrig}
-\href{mailto:David.Salek@cern.ch}{David Salek}
-\href{mailto:s.sarkar1@physics.ox.ac.uk}{Subir Sarkar}
-\href{mailto:Alexander.Schmidt@cern.ch}{Alexander Schmidt}
-\href{mailto:Steven.Schramm@cern.ch}{Steven Randolph Schramm}
-\href{mailto:will.shepherd@gmail.com}{William Shepherd}
-\href{mailto:andrea.desimone@sissa.it}{Andrea de Simone}
-\href{mailto:gurpreet.singh@cern.ch}{Gurpreet Singh}
-\href{mailto:Livia.Soffi@cern.ch}{Livia Soffi}
-\href{mailto:Norraphat.Srimanobhas@cern.ch}{Phat Srimanobhas}
-\href{mailto:kevin.kai.hong.sung@cern.ch}{Kevin Kai Hong Sung}
-\href{mailto:ttait@uci.edu}{Tim Tait}
-\href{mailto:Timothee.Theveneaux-Pelzer@cern.ch}{Timothee Theveneaux-Pelzer}
-\href{mailto:mct1g11@soton.ac.uk}{Marc Thomas}
-\href{mailto:nhan.viet.tran@cern.ch}{Nhan Viet Tran}
-\href{mailto:Daniele.Trocino@cern.ch}{Daniele Trocino}
-\href{mailto:alessandro.vichi@cern.ch}{Alessandro Vichi}
-\href{mailto:Fuquan.Wang@cern.ch}{Fuquan Wang}
-\href{mailto:liantaow@uchicago.edu}{LianTao Wang}
-\href{mailto:renjie.wang@cern.ch}{Renjie Wang}
-\href{mailto:daniel@uci.edu}{Daniel Whiteson}
-\href{mailto:steven.worm@cern.ch}{Steve Worm}
-\href{mailto:mengqing.wu@cern.ch}{Mengqing Wu}
-\href{mailto:sau.lan.wu@cern.ch}{Sau Lan Wu}
-\href{mailto:Hongtao.Yang@cern.ch}{Hongtao Yang}
-\href{mailto:Yong.Yang@cern.ch}{Yong Yang}
-\href{mailto:Shin-Shan.Yu@cern.ch}{Shin-Shan Yu}
-\href{mailto:marco.zanetti@cern.ch}{Marco Zanetti}
-\href{mailto:zhangzq@lal.in2p3.fr}{Zhiqing Philippe Zhang}
-\href{mailto:a.zucchetta@cern.ch}{Alberto Zucchetta}
-\href{mailto:kzurek@berkeley.edu}{Kathryn Zurek}
+\noindent\href{mailto:daniel.abercrombie@cern.ch}{Daniel Robert Abercrombie} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:nural.akchurin@cern.ch}{Nural Akchurin} 
+\emph{Texas Tech University, USA}\\
+\noindent\href{mailto:ece.akilli@cern.ch}{Ece Akilli} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:juan.alcaraz@cern.ch}{Juan Alcaraz} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Jeremy.Andrea@cern.ch}{Jeremy Andrea} 
+\emph{Universit\'e de Strasbourg/CNRS-IN2P3, France}\\
+\noindent\href{mailto:Patrizia.Azzi@cern.ch}{Patrizia Azzi} 
+\emph{INFN Padova, Italy}\\
+\noindent\href{mailto:mbackovic@gmail.com}{Mihailo Backovic} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:yangbai@physics.wisc.edu}{Yang Bai} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:swagato.banerjee@gmail.com}{Swagato Banerjee} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Alexander.Belyaev@cern.ch}{Alexander Belyaev} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:antonio.boveia@cern.ch}{Antonio Boveia} 
+\emph{CERN, Switzerland}\\
+\noindent\href{mailto:amelia.jean.brennan@cern.ch}{Amelia Jean Brennan} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Oliver.Buchmueller@Cern.ch}{Oliver Buchmueller} 
+\emph{Imperial College London, United Kingdom}\\
+\noindent\href{mailto:mbuckley@physics.rutgers.edu}{Matthew Buckley} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:giorgio.busoni@sissa.it}{Giorgio Busoni} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Michael.Buttignol@cern.ch}{Michael Buttignol} 
+\emph{ Universit\'e de Strasbourg/CNRS-IN2P3, France}\\
+\noindent\href{mailto:cacciapa@ipnl.in2p3.fr}{Giacomo Cacciapaglia} 
+\emph{Universit\'e de Lyon and Universit\'e Lyon 1, CNRS/IN2P3, UMR5822, IPNL, France}\\
+\noindent\href{mailto:Regina.Caputo@cern.ch}{Regina Caputo} 
+\emph{Santa Cruz Institute for Particle Physics, Department of Physics and Department of Astronomy and Astrophysics, University of California at Santa Cruz, USA}\\
+\noindent\href{mailto:lmc@physics.osu.edu}{Linda Carpenter} 
+\emph{Ohio State University, USA}\\
+\noindent\href{mailto:Mingshui.Chen@cern.ch}{Mingshui Chen} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:john.paul.chou@cern.ch}{John Paul Chou} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:annapaola.de.cosa@cern.ch}{Annapaola De Cosa} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:christopher.cowden@cern.ch}{Chris Cowden} 
+\emph{Texas Tech University, USA}\\
+\noindent\href{mailto:deandrea@ipnl.in2p3.fr}{Aldo Deandrea} 
+\emph{Universit\'e de Lyon and Universit\'e Lyon 1, CNRS/IN2P3, UMR5822, IPNL, France}\\
+\noindent\href{mailto:adifranz@uci.edu}{Anthony DiFranzo} 
+\emph{Department of Physics and Astronomy, University of California, Irvine and Theoretical Physics Department, Fermilab, USA}\\
+\noindent\href{mailto:caterina.doglioni@cern.ch}{Caterina Doglioni} 
+\emph{Lund University, Sweden}\\
+\noindent\href{mailto:Johannes.Erdmann@cern.ch}{Johannes Erdmann} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:cfischer@ifae.es}{Cora Fischer} 
+\emph{IFAE Barcelona, Spain}\\
+\noindent\href{mailto:pjfox@fnal.gov}{Patrick Fox} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Benjamin.Fuks@cern.ch}{Benjamin Fuks} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:genest@lpsc.in2p3.fr}{Marie-Helene Genest} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Bhawna.Gomber@cern.ch}{Bhawna Gomber} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:arely.cortes.gonzalez@cern.ch}{Arely Cortes Gonzales} 
+\emph{IFAE Barcelona, Spain}\\
+\noindent\href{mailto:barbara.alvarez.gonzalez@cern.ch}{Barbara Alvarez Gonzalez} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:johanna.gramling@cern.ch}{Johanna Gramling} 
+\emph{Universit\'e de Gen\`eve, Ecole de Physique, Switzerland}\\
+\noindent\href{mailto:michele.degruttola@cern.ch}{Michele De Gruttola} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:gunion@physics.ucdavis.edu}{John Gunion} 
+\emph{University of California, Davis, USA}\\
+\noindent\href{mailto:kristian.hahn@cern.ch}{Kristian Hahn} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:ulrich.haisch@physics.ox.ac.uk}{Ulrich Haisch} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:roni.harnik@gmail.com}{Roni Harnik} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:philip.coleman.harris@cern.ch}{Philip Coleman Harris} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Kerstin.Hoepfner@cern.ch}{Kerstin Hoepfner} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:siew.yan.hoh@cern.ch}{Siew Yan Hoh} 
+\emph{National Centre for Particle Physics, Universiti Malaya, Malaysia}\\
+\noindent\href{mailto:schsu@uw.edu}{Shih-Chieh Hsu} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:valerio.ippolito@cern.ch}{Valerio Ippolito} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:thomas.jacques@unige.ch}{Thomas Jacques} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Xiangyang.Ju@cern.ch}{Xiangyang Ju} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:felix.kahlhoefer@desy.de}{Felix Kahlhoefer} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Alexis.Kalogeropoulos@cern.ch}{Alexis Kalogeropoulos} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:laser.seymour.kaplan@cern.ch}{Laser Seymour Kaplan} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Lashkar.Kashif@cern.ch}{Lashkar Kashif} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:valya.khoze@durham.ac.uk}{Valentin Khoze} 
+\emph{Institute of Particle Physics Phenomenology, Durham University, United Kingdom}\\
+\noindent\href{mailto:Raman.Khurana@cern.ch}{Raman Khurana} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:khristian.kotov@cern.ch}{Khristian Kotov} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:dmytro.kovalskyi@cern.ch}{Dmytro Kovalskyi} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:suchita.kulkarni@oeaw.ac.at}{Suchita Kulkarni} 
+\emph{Institut f\"ur Hochenergiephysik, \"Osterreichische Akademie der Wissenschaften, Austria}\\
+\noindent\href{mailto:shuichi.kunori@ttu.edu}{Shuichi Kunori} 
+\emph{Texas Tech University, USA}\\
+\noindent\href{mailto:hminlee@cau.ac.kr}{Hyun Min Lee} 
+\emph{Department of Physics, Chung-Ang University, Korea}\\
+\noindent\href{mailto:sungwon.lee@cern.ch}{Sung-Won Lee} 
+\emph{Texas Tech University, USA}\\
+\noindent\href{mailto:spliew@lbl.gov}{Seng Pei Liew} 
+\emph{Department of Physics, University of Tokyo, Japan}\\
+\noindent\href{mailto:tongylin@gmail.com}{Tongyan Lin} 
+\emph{Kavli Institute for Cosmological Physics, University of Chicago, USA}\\
+\noindent\href{mailto:steven.lowette@cern.ch}{Steven Lowette} 
+\emph{Vrije Universiteit Brussel - IIHE, Belgium}\\
+\noindent\href{mailto:romain.madar@cern.ch}{Romain Madar} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:sarah.malik@cern.ch}{Sarah Malik} 
+\emph{Imperial College London, United Kingdom}\\
+\noindent\href{mailto:Fabio.Maltoni@cern.ch}{Fabio Maltoni} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:o.p.c.mattelaer@durham.ac.uk}{Olivier Mattelaer} 
+\emph{IPPP Durham, United Kingdom}\\
+\noindent\href{mailto:kentarou.mawatari@vub.ac.be}{Kentarou Mawatari} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:c.mccabe@uva.nl}{Christopher McCabe} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:megy@clermont.in2p3.fr}{Th\'eo Jean Megy} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:enrico.morgante@unige.ch}{Enrico Morgante} 
+\emph{D\'epartement de Physique Th\'eorique and Centre for Astroparticle Physics (CAP), Universit\'e de Gen\`eve, Switzerland}\\
+\noindent\href{mailto:mrenna@fnal.gov}{Steve Mrenna} 
+\emph{FNAL, USA}\\
+\noindent\href{mailto:siddharth.m.narayanan@cern.ch}{Siddharth M Narayanan} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:andrew.james.nelson@cern.ch}{Andy Nelson} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Sergio.Novaes@cern.ch}{S\'ergio F. Novaes} 
+\emph{Universidade Estadual Paulista, NO COUNTRY}\\
+\noindent\href{mailto:klaas.ole.padeken@cern.ch}{Klaas Ole Padeken} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Priscilla.Pani@cern.ch}{Priscilla Pani} 
+\emph{Stockholm University, Sweden}\\
+\noindent\href{mailto:mpapucci@lbl.gov}{Michele Papucci} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:paulini@heps.phys.cmu.edu}{Manfred Paulini} 
+\emph{Carnegie Mellon University, USA}\\
+\noindent\href{mailto:Jacopo.Pazzini@pd.infn.it}{Jacopo Pazzini} 
+\emph{Universit\`a di Padova, Italy}\\
+\noindent\href{mailto:Bjoern.Penning@cern.ch}{Bj\"orn Penning} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:mmp@ifae.es}{Mario Martinez Perez} 
+\emph{IFAE Barcelona, Spain}\\
+\noindent\href{mailto:mpeskin@slac.stanford.edu}{Michael Peskin} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Arturo.Rodolfo.Sanchez.Pineda@cern.ch}{Arturos Sanchez Pineda} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Deborah.Pinna@cern.ch}{Deborah Pinna} 
+\emph{University of Zurich, Switzerland}\\
+\noindent\href{mailto:tdupree.cms@gmail.com}{Tristan du Pree} 
+\emph{CERN, Switzerland}\\
+\noindent\href{mailto:shamona.fawad.qazi@cern.ch}{Shamona F. Qazi} 
+\emph{National Centre for Physics, Quaid-i-Azam University, Pakistan}\\
+\noindent\href{mailto:davide.racco@unige.ch}{Davide Racco} 
+\emph{D\'epartement de Physique Th\'eorique and Center for Astroparticle Physics, Universit\'e de Gen\`eve, Switzerland}\\
+\noindent\href{mailto:emanuele.re@physics.ox.ac.uk}{Emanuele Re} 
+\emph{Rudolf Peierls Centre for Theoretical Physics, University of Oxford, United Kingdom}\\
+\noindent\href{mailto:antonio.riotto@unige.ch}{Antonio Riotto} 
+\emph{Department of Theoretical Physics, University of Geneva, Switzerland}\\
+\noindent\href{mailto:rizzo@slac.stanford.edu}{Tom Rizzo} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:rainer.roehrig@cern.ch}{Rainer Roehrig} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:David.Salek@cern.ch}{David Salek} 
+\emph{Nikhef and GRAPPA, The Netherlands}\\
+\noindent\href{mailto:s.sarkar1@physics.ox.ac.uk}{Subir Sarkar} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Alexander.Schmidt@cern.ch}{Alexander Schmidt} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Steven.Schramm@cern.ch}{Steven Randolph Schramm} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:will.shepherd@gmail.com}{William Shepherd} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:andrea.desimone@sissa.it}{Andrea de Simone} 
+\emph{SISSA and INFN, Sezione di Trieste, Italy}\\
+\noindent\href{mailto:gurpreet.singh@cern.ch}{Gurpreet Singh} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Livia.Soffi@cern.ch}{Livia Soffi} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Norraphat.Srimanobhas@cern.ch}{Phat Srimanobhas} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:kevin.kai.hong.sung@cern.ch}{Kevin Sung} 
+\emph{Northwestern University, USA}\\
+\noindent\href{mailto:ttait@uci.edu}{Tim Tait} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Timothee.Theveneaux-Pelzer@cern.ch}{Timothee Theveneaux-Pelzer} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:mct1g11@soton.ac.uk}{Marc Thomas} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:nhan.viet.tran@cern.ch}{Nhan Viet Tran} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Daniele.Trocino@cern.ch}{Daniele Trocino} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:sonaina.undleeb@ttu.edu}{Sonaina Undleeb} 
+\emph{Texas Tech University, USA}\\
+\noindent\href{mailto:alessandro.vichi@cern.ch}{Alessandro Vichi} 
+\emph{Theory division, CERN, Switzerland }\\
+\noindent\href{mailto:Fuquan.Wang@cern.ch}{Fuquan Wang} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:liantaow@uchicago.edu}{LianTao Wang} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:renjie.wang@cern.ch}{Ren-Jie Wang} 
+\emph{Department of Physics, Northeastern University, USA}\\
+\noindent\href{mailto:daniel@uci.edu}{Daniel Whiteson} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:steven.worm@cern.ch}{Steve Worm} 
+\emph{Particle Physics Department, Rutherford Appleton Laboratory, United Kingdom}\\
+\noindent\href{mailto:mengqing.wu@cern.ch}{Mengqing Wu} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:sau.lan.wu@cern.ch}{Sau Lan Wu} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Hongtao.Yang@cern.ch}{Hongtao Yang} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Yong.Yang@cern.ch}{Yong Yang} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:Shin-Shan.Yu@cern.ch}{Shin-Shan Yu} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:marco.zanetti@cern.ch}{Marco Zanetti} 
+\emph{Universit\`a di Padova, Italy}\\
+\noindent\href{mailto:zhangzq@lal.in2p3.fr}{Zhiqing Philippe Zhang} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
+\noindent\href{mailto:a.zucchetta@cern.ch}{Alberto Zucchetta} 
+\emph{Universit\`a di Padova, Italy}\\
+\noindent\href{mailto:kzurek@berkeley.edu}{Kathryn Zurek} 
+\emph{NO INSTITUTE, NO COUNTRY}\\
